--- a/Progetto/WebContent/catalogo.html
+++ b/Progetto/WebContent/catalogo.html
@@ -1,3 +1,4 @@
+    
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,13 +8,36 @@
 </head>
 <body>
 
-	<div class="navbar">
-		<a href='./index.html'><img src="logo.jpg" alt="picture" height=100% width="350"/></a>
-		<a class="but" href='./catalogo.html'>Catalogo</a>
-		<a class="but" href="#">Chi Siamo</a>
-  	    <a class="but" href="#">Contatti</a>
-    	<a class="but" href="#">Login</a>
-   	</div>
-
+	<nav class="navbar">
+		<a class="logo" href='./home.html'><img src="logo.jpg" alt="picture" height=auto width=100%/></a>
+		
+			<ul class="list">
+				
+				 <li><a href='./catalogo.html'>Catalogo</a></li>
+				<li><a href="#">Chi Siamo</a></li>
+				<li><a href="#">Contatti</a></li>
+		    	<li><a href="#">Login</a></li>
+		    </ul>
+	</nav>
+	<br>
+	<div class="con">
+		<h1 class="h1">Scegliere la categoria:</h1>
+	
+	</div>
+	<div id="container">
+		<ul id="griglia">
+		<li><img src="/Project/WebContent/pancakes.jpg"></li>
+		<li><img src="es-2.jpg"></li>
+		<li><img src="es-3.jpg"></li>
+		<li><img src="es-4.jpg"></li>
+		<li><img src="es-5.jpg"></li>
+		<li><img src="es-6.jpg"></li>
+		<li><img src="es-7.jpg"></li>
+		<li><img src="es-8.jpg"></li>
+		<li><img src="es-9.jpg"></li>
+		<li><img src="es-10.jpg"></li>
+</ul>
+</div>
+	
 </body>
 </html>
