--- a/Progetto/WebContent/catalogo.html
+++ b/Progetto/WebContent/catalogo.html
@@ -21,23 +21,16 @@
 	</nav>
 	<br>
 	<div class="con">
-		<h1 class="h1">Scegliere la categoria:</h1>
+		<h1 class="h1">Scegli la categoria:</h1>
 	
-	</div>
-	<div id="container">
-		<ul id="griglia">
-		<li><img src="/Project/WebContent/pancakes.jpg"></li>
-		<li><img src="es-2.jpg"></li>
-		<li><img src="es-3.jpg"></li>
-		<li><img src="es-4.jpg"></li>
-		<li><img src="es-5.jpg"></li>
-		<li><img src="es-6.jpg"></li>
-		<li><img src="es-7.jpg"></li>
-		<li><img src="es-8.jpg"></li>
-		<li><img src="es-9.jpg"></li>
-		<li><img src="es-10.jpg"></li>
+	
+	
+		<ul>
+		<li ><p >pancakes</p><img class="im" src="pancakes.jpg"></li>
+		<li ><p >cupcakes</p><img class="im" src="images.jpg"></li>
+		<li ><p >crepes</p><img class="im" src="crepes.jpg"></li>
+
 </ul>
 </div>
-	
 </body>
 </html>
